--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/msdit/shamsi-date.git"
+    "url": "git+https://github.com/msdit/shamsi-date-converter.git"
   },
   "keywords": [
     "jalaali",
@@ -35,9 +35,9 @@
   "author": "Masoud Aghaei",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/msdit/shamsi-date/issues"
+    "url": "https://github.com/msdit/shamsi-date-converter/issues"
   },
-  "homepage": "https://github.com/msdit/shamsi-date",
+  "homepage": "https://github.com/msdit/shamsi-date-converter",
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
